@@ -8,3 +8,5 @@
 #undef PACKAGE_DATA_DIR
 #undef PACKAGE_SOURCE_DIR
 #undef ENABLE_BONOBO
+#undef ENABLE_FRGBA
+#undef ENABLE_RBUF
