@@ -15,7 +15,10 @@ AC_HEADER_STDC
 
 GNOME_COMPILE_WARNINGS
 GNOME_X_CHECKS
+
 GNOME_PRINT_CHECK
+AC_CHECK_HEADER(libgnomeprint/gnome-print-frgba.h,AC_DEFINE(ENABLE_FRGBA))
+AC_CHECK_HEADER(libgnomeprint/gnome-print-rbuf.h,AC_DEFINE(ENABLE_RBUF))
 
 dnl Add the languages which your application supports here.
 ALL_LINGUAS="da et no ru uk"
